--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
 <head>
   <meta charset="utf-8">
   <title>my-vue</title>
+  <link rel="stylesheet" href="src/plugin/datepicker/css/datepicker.material.css">
+  
 </head>
 
 <body>
   <div id="app"></div>
 
 
- 
+
 
   </main>
+  <script src="src/plugin/datepicker/datepicker.js"></script>
   <script src="/dist/build.js"></script>
 </body>
 
